[project]
name = "stackoverflow-79640269"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.121.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
